# RP8086

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  STATUS.md  bios.h  config.h  cpu.c  cpu.h  cpu_bus.c  cpu_bus.h  i8086_bus.pio  main.c  memmap.ld
.claude/: settings.local.json
binary/: GLABIOS.ROM  checkit.img  fdd.img
bios/: bios.asm
cmake/: rename_with_build_number.cmake  rename_with_commit_and_build.cmake
docs/: i8086_architecture_reference.json  intel_8086_specs.json  intel_8237a_specs.json  intel_8253_specs.json  intel_8259a_specs.json  intel_8272a_specs.json  pcxtbios_map.toon
docs/specs/: 6845_crtc.toon  765_fdc.toon  8042_keyboard_controller.toon  8253_pit.toon  8259_pic.toon  bus.toon  cmos_rtc.toon  i8086_architecture_reference.toon  intel_8086_specs.toon  intel_8237a_specs.toon  intel_8253_specs.toon  intel_8259a_specs.toon  intel_8272a_specs.toon  keyboard_commands.toon  pc16550d_spec.toon  port_addresses.toon  uart.toon
drivers/graphics/: graphics.c  graphics.h
drivers/ntsc-tv/: graphics.c  graphics.h
drivers/sdcard/: sdcard.c  sdcard.h
drivers/usbhid/: CMakeLists.txt  hid_app.c  hid_app.h  tusb_config.h  usb_to_xt_scancodes.h
drivers/vga-nextgen/: vga.c  vga.h
glabios/: GLABIOS.ASM
rom/: basic.h  bios.h  fdd.h
src/: common.c  common.h  config.h  cpu.c  cpu.h  cpu_bus.c  cpu_bus.h  debug.h  i8086_bus.pio  main.c  memory.h  ports.h  setup.c  setup.h  tusb_config.h
src/hardware/: i16550.h  i8237.h  i8253.h  i8259.h  i8272.h  ide.h  uart16550.h
